syntax = "proto3";
package proto;
option go_package = "./proto";

service AddressService {
  rpc NewAddress(NewAddressRequest) returns (NewAddressResponse) {};
  rpc ChangeAddress(NewAddressRequest) returns (NewAddressResponse) {};
}

message NewAddressRequest {
  string city = 1;
  string complement = 2;
  int64 number = 3;
  string state = 4;
  string street = 5;
  string user = 6;
}

message NewAddressResponse {
  string status = 1;
}