syntax = "proto3";
package proto;
option go_package = "./proto";

service PersonService {
  rpc CreatePerson(CreatePersonRequest) returns (CreatePersonReponse) {}
}

message CreatePersonRequest {
  string name = 1;
  int64 age = 2;
}

message CreatePersonReponse {
  string status = 1;
}